// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site renders Site renders correct 1`] = `
<Row>
  <Column
    width={3}
  >
    <SideMenu
      header="Menu"
      items={
        [
          {
            "label": "Questions",
            "to": "/questions",
          },
          {
            "label": "My Questions",
            "to": "myquestions",
          },
          {
            "label": "My Favourite Answers",
            "to": "favourites",
          },
          {
            "label": "New Question",
            "to": "createquestion",
          },
          {
            "label": "Tags",
            "to": "/tags",
          },
        ]
      }
    />
    <SideMenu
      header="Select Tags"
    >
      <div
        style={
          {
            "padding": "10px",
            "paddingBottom": "0px",
          }
        }
      >
        <FormSelect
          onChange={[Function]}
          value="none"
        >
          <option
            value="all"
          >
            Sort tags...
          </option>
          <option
            value="popularity"
          >
            Popularity
          </option>
          <option
            value="a-z"
          >
            A-Z
          </option>
          <option
            value="z-a"
          >
            Z-A
          </option>
        </FormSelect>
      </div>
      <div
        style={
          {
            "padding": "10px",
          }
        }
      >
        <FormInput
          onChange={[Function]}
          placeholder="Search"
          type="text"
          value=""
        />
      </div>
      <ul
        className="list-group list-group-flush"
      >
        <li
          className="list-group-item"
          key="0"
        >
          <ButtonLight
            key="1"
            onClick={[Function]}
          >
            test
             
            1
          </ButtonLight>
        </li>
      </ul>
    </SideMenu>
  </Column>
  <Column>
    <Card
      title="Top Questions"
    >
      <br />
      <Row>
        <Column>
          <FormInput
            onChange={[Function]}
            placeholder="Search..."
            type="text"
            value=""
          />
        </Column>
      </Row>
    </Card>
    <QuestionCard
      key="0"
      question={
        {
          "date": "test",
          "description": "test",
          "question_id": 1,
          "score": 1,
          "title": "test",
          "user_id": 1,
          "username": "test",
        }
      }
    />
  </Column>
</Row>
`;

exports[`switchcase switchcase a-z 1`] = `
<Row>
  <Column
    width={3}
  >
    <SideMenu
      header="Menu"
      items={
        [
          {
            "label": "Questions",
            "to": "/questions",
          },
          {
            "label": "My Questions",
            "to": "myquestions",
          },
          {
            "label": "My Favourite Answers",
            "to": "favourites",
          },
          {
            "label": "New Question",
            "to": "createquestion",
          },
          {
            "label": "Tags",
            "to": "/tags",
          },
        ]
      }
    />
    <SideMenu
      header="Select Tags"
    >
      <div
        style={
          {
            "padding": "10px",
            "paddingBottom": "0px",
          }
        }
      >
        <FormSelect
          onChange={[Function]}
          value="a-z"
        >
          <option
            value="all"
          >
            Sort tags...
          </option>
          <option
            value="popularity"
          >
            Popularity
          </option>
          <option
            value="a-z"
          >
            A-Z
          </option>
          <option
            value="z-a"
          >
            Z-A
          </option>
        </FormSelect>
      </div>
      <div
        style={
          {
            "padding": "10px",
          }
        }
      >
        <FormInput
          onChange={[Function]}
          placeholder="Search"
          type="text"
          value=""
        />
      </div>
      <ul
        className="list-group list-group-flush"
      >
        <li
          className="list-group-item"
          key="0"
        >
          <ButtonLight
            key="1"
            onClick={[Function]}
          >
            test
             
            1
          </ButtonLight>
        </li>
      </ul>
    </SideMenu>
  </Column>
  <Column>
    <Card
      title="Top Questions"
    >
      <br />
      <Row>
        <Column>
          <FormInput
            onChange={[Function]}
            placeholder="Search..."
            type="text"
            value=""
          />
        </Column>
      </Row>
    </Card>
    <QuestionCard
      key="0"
      question={
        {
          "date": "test",
          "description": "test",
          "question_id": 1,
          "score": 1,
          "title": "test",
          "user_id": 1,
          "username": "test",
        }
      }
    />
  </Column>
</Row>
`;

exports[`switchcase switchcase popular 1`] = `
<Row>
  <Column
    width={3}
  >
    <SideMenu
      header="Menu"
      items={
        [
          {
            "label": "Questions",
            "to": "/questions",
          },
          {
            "label": "My Questions",
            "to": "myquestions",
          },
          {
            "label": "My Favourite Answers",
            "to": "favourites",
          },
          {
            "label": "New Question",
            "to": "createquestion",
          },
          {
            "label": "Tags",
            "to": "/tags",
          },
        ]
      }
    />
    <SideMenu
      header="Select Tags"
    >
      <div
        style={
          {
            "padding": "10px",
            "paddingBottom": "0px",
          }
        }
      >
        <FormSelect
          onChange={[Function]}
          value="popularity"
        >
          <option
            value="all"
          >
            Sort tags...
          </option>
          <option
            value="popularity"
          >
            Popularity
          </option>
          <option
            value="a-z"
          >
            A-Z
          </option>
          <option
            value="z-a"
          >
            Z-A
          </option>
        </FormSelect>
      </div>
      <div
        style={
          {
            "padding": "10px",
          }
        }
      >
        <FormInput
          onChange={[Function]}
          placeholder="Search"
          type="text"
          value=""
        />
      </div>
      <ul
        className="list-group list-group-flush"
      >
        <li
          className="list-group-item"
          key="0"
        >
          <ButtonLight
            key="1"
            onClick={[Function]}
          >
            test
             
            1
          </ButtonLight>
        </li>
      </ul>
    </SideMenu>
  </Column>
  <Column>
    <Card
      title="Top Questions"
    >
      <br />
      <Row>
        <Column>
          <FormInput
            onChange={[Function]}
            placeholder="Search..."
            type="text"
            value=""
          />
        </Column>
      </Row>
    </Card>
    <QuestionCard
      key="0"
      question={
        {
          "date": "test",
          "description": "test",
          "question_id": 1,
          "score": 1,
          "title": "test",
          "user_id": 1,
          "username": "test",
        }
      }
    />
  </Column>
</Row>
`;

exports[`switchcase switchcase z-a 1`] = `
<Row>
  <Column
    width={3}
  >
    <SideMenu
      header="Menu"
      items={
        [
          {
            "label": "Questions",
            "to": "/questions",
          },
          {
            "label": "My Questions",
            "to": "myquestions",
          },
          {
            "label": "My Favourite Answers",
            "to": "favourites",
          },
          {
            "label": "New Question",
            "to": "createquestion",
          },
          {
            "label": "Tags",
            "to": "/tags",
          },
        ]
      }
    />
    <SideMenu
      header="Select Tags"
    >
      <div
        style={
          {
            "padding": "10px",
            "paddingBottom": "0px",
          }
        }
      >
        <FormSelect
          onChange={[Function]}
          value="z-a"
        >
          <option
            value="all"
          >
            Sort tags...
          </option>
          <option
            value="popularity"
          >
            Popularity
          </option>
          <option
            value="a-z"
          >
            A-Z
          </option>
          <option
            value="z-a"
          >
            Z-A
          </option>
        </FormSelect>
      </div>
      <div
        style={
          {
            "padding": "10px",
          }
        }
      >
        <FormInput
          onChange={[Function]}
          placeholder="Search"
          type="text"
          value=""
        />
      </div>
      <ul
        className="list-group list-group-flush"
      >
        <li
          className="list-group-item"
          key="0"
        >
          <ButtonLight
            key="1"
            onClick={[Function]}
          >
            test
             
            1
          </ButtonLight>
        </li>
      </ul>
    </SideMenu>
  </Column>
  <Column>
    <Card
      title="Top Questions"
    >
      <br />
      <Row>
        <Column>
          <FormInput
            onChange={[Function]}
            placeholder="Search..."
            type="text"
            value=""
          />
        </Column>
      </Row>
    </Card>
    <QuestionCard
      key="0"
      question={
        {
          "date": "test",
          "description": "test",
          "question_id": 1,
          "score": 1,
          "title": "test",
          "user_id": 1,
          "username": "test",
        }
      }
    />
  </Column>
</Row>
`;
